# VideoProcessor

./: .gitignore  Cargo.toml  README.md  image.rs.copy
src/: colour.rs  console.rs  error.rs  image.rs  json.rs  main.rs  plot.py
