[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
plotpy = "0.5.1"
rayon = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
term = "0.7.0"
thiserror = "1.0.57"
video-rs = { version = "0.5.0", features = ["ndarray"] }

[profile.release]
# codegen-units = 1
# lto = "fat"
# opt-level = 3
