[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
plotpy = "1.13.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
term = "1.1.0"
thiserror = "2.0.12"
video-rs = { version = "0.10.3", features = ["ndarray"] }

[profile.release]
# codegen-units = 1
# lto = "fat"
# opt-level = 3
